@@ -8,6 +8,7 @@
 - compat-31: New functions =minusp= and =plusp=.
 - compat-31: New macros =incf= and =decf=.
 - compat-31: New function =color-blend=.
+- compat-31: New function =completion-table-with-metadata=.
 - Drop support for Emacs 24.x. Emacs 25.1 is required now. In case
   Emacs 24.x support is still needed, Compat 30 can be used.
 
